--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+strum_macros = "0.27"
+derive-getters = "0.2" # Or the latest version
+
 eframe = "0.33.0"  # Use the latest version from crates.io
 strum = "0.27"
-strum_macros = "0.27"
